# OpenMP_Pattern_Recognition

./: .gitignore  CMakeLists.txt  generate_plots.py  parallelization_analysis_visualized.ipynb  run_performance_tests.sh
include/: Benchmark.h  DataLoading.h  SearchEngine.h  TimeSeries.h  TimeSeriesAoS.h  TimeSeriesDataset.h  TimeSeriesSoA.h
src/: Benchmark.cpp  DataLoading.cpp  SearchEngine.cpp  main  main.cpp
src/utils/: generate_timeseries.py  plot_timeseries.py
